# BioAutoML-FAST

./: .dockerignore  .gitignore  BioAutoML-BigData-DNA.py  BioAutoML-ChaosGame-DNA-RNA.py  BioAutoML-binary.py  BioAutoML-env.yml  BioAutoML-feature.py  BioAutoML-multiclass.py  BioAutoML-protein.py  BioAutoML-regression.py  Dockerfile  LICENSE  README.md  clean_experiments.sh  docker-compose.yml  experiments_analysis.ipynb  main.nf  new_test.csv  new_train.csv  pyproject.toml  requirements.txt  run_experiments.py  table.tex  table_filled.tex  test.ipynb
.nextflow/: history
.nextflow/cache/14dad70d-d32b-47c0-bae8-323efda0b42d/: index.crazy_monod
.nextflow/cache/1e0860d9-a69f-4a24-aed0-e128a87cab95/: index.intergalactic_mestorf
.nextflow/cache/6e3e9363-68ec-45ff-aaa1-945b6f8ae341/: index.angry_pike
App/: .fuse_hidden0035b23b000e112a  .fuse_hidden0035ba9c0000160d  .fuse_hidden0035bb7b000e0fd6  .fuse_hidden0035bc57000e1039  .fuse_hidden0035bd8d000e112c  app.py  dict_aa.pkl  dict_nt.pkl  environment.yml  task_results.db
App/.streamlit/: config.toml
App/datasets/: preprocess.sh  references.bib  split.sh  split2.sh
App/examples/: binary_test.csv  binary_test_predict.csv  multiclass_test_predict.csv
App/modules/: __init__.py  about.py  help.py  home.py  jobs.py  repo.py  share.py  tutorials.py
App/setup/: __init__.py  home.py
App/utils/: __init__.py  blablador.py  db.py  process.py  stats.py  tasks.py
other-methods/: ChaosGameTheory.py  EntropyClass.py  preprocessing.py
other-methods/modlAMP-modified/: descriptors.py
other-methods/repDNA/: repDNA-feat.py
(+734 files in other folders)
